--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.3",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.5.11",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
